build app - corrected

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Meriemu.github.io/tik-tak-toe-Reactjs"
+  "homepage": "https://Meriemu.github.io/tik-tak-toe-Reactjs",
   "name": "tik-tak-toe",
   "version": "0.1.0",
   "private": true,
